# control-panel

./: README.md  controlpanel.stl  pyproject.toml
controlpanel/: __main__.py
controlpanel/api/: __init__.py  event_manager.py  joystick.py  load_scripts.py  load_scripts_helper.py  logger.py  services.py
controlpanel/api/dummy/: __init__.py  accelerometer.py  adc.py  fixture.py  fourteensegment.py  hall_sensor.py  pwm.py  sensor.py
controlpanel/dmx/: __init__.py  devices.py  manifest.py
controlpanel/game_manager/: game_manager.py  games.py  sound.py
controlpanel/linting/: restricted_checker.py
controlpanel/scripts/: banana_plug.py  battery.py  power_off_everything.py
controlpanel/server/: app.py
controlpanel/shared/: device_manifest.json
controlpanel/upy/: boot.py  node.py  utils.py
controlpanel/upy/phys/: __init__.py  accelerometer.py  composite_pwm.py  fourteensegment.py  hall_sensor.py  pwm.py  servo.py
dev_tools/transfer/: transfer.py
src/: .webreplignore
src/controlpanel/: .webreplignore  __init__.py  __main__.py
src/controlpanel/api/: __init__.py  api.py  callback.py  commons.py  get_device.py  load_scripts.py  load_scripts_helper.py  services.py
src/controlpanel/api/dummy/: adc.py  composite_pwm.py  digital_pin.py  esp32.py  led_strip.py  rotary_dial.py  servo.py  seven_segment.py  shift_registers.py  water_flow_sensor.py
src/controlpanel/dmx/: animations.py  dmx.py  dmx_example.py
src/controlpanel/event_manager/: __init__.py  event_manager.py
src/controlpanel/event_manager/dummy/: banana_plugs.py  button.py  composite_pwm.py  digital_pin.py  fixture.py  fourteensegment.py  led_strip.py  node.py  pwm.py  rfid_reader.py  servo.py  seven_segment.py  shift_registers.py
src/controlpanel/game_manager/: __init__.py  game_manager.py  games.py  utils.py
src/controlpanel/server/: app.py
src/controlpanel/server/static/: style.css
src/controlpanel/server/templates/: index.html
src/controlpanel/shaders/: __init__.py  add.frag  blur_h.frag  blur_v.frag  crt.frag  downscale.frag  ghost.frag  quad.vert  shader_manifest.py  shaders.py  threshold.frag  to_bgra.frag
src/controlpanel/shared/: compatibility.py  device_manifest.json
src/controlpanel/shared/base/: __init__.py  banana_plugs.py  device.py  fixture.py  led_strip.py  sensor.py
src/controlpanel/upy/: hostname_manifest.json  main.py  node.py  utils.py
src/controlpanel/upy/artnet/: __init__.py  artnet.py  helper.py
src/controlpanel/upy/c_modules/: fourteensegment.mpy  hsl_decompression.c  rgb_decompression.c  rgb_decompression.mpy
src/controlpanel/upy/libs/: MPU6050.py  __init__.py
src/controlpanel/upy/libs/rfid_reader/: mfrc522.py
src/controlpanel/upy/libs/seven_segment/: __init__.py  max7219.py
src/controlpanel/upy/phys/: adc.py  banana_plugs.py  button.py  composite_pwm.py  digital_pin.py  fixture.py  fourteensegment.py  led_strip.py  rfid_reader.py  rotary_dial.py  sensor.py  seven_segment.py  shift_registers.py  water_flow_sensor.py
src/dev_tools/flash_firmware/: flash_firmware.py
src/dev_tools/generate_stubs/: __init__.py  callback.py  get_device.py  main.py
src/dev_tools/transfer/: .webreplignore  checksumtest.py  transfer.py  webrepl.py
templates/: index.html
userscripts/: battery.py  fogmachine.py  gameoflife.py  gameoflife_colorful.py  joystick_fun.py  keyboard.py  override_ips.py  power_off_everything.py  reaktor_fun.py  starbars.py  temperature.py  test_dmx.py  whitelist.txt
userscripts/terminal_gui/: __init__.py  lasergame.py  main.py
