[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "control-panel"
version = "0.0.1"
description = ""
authors = [
    { name = "Dachboden", email = "info@dachboden.berlin" }
]
requires-python = ">=3.11"
dependencies = [
    "pygame-ce",
    "pyftdi",
    "moderngl",
    "pygame_shaders",
    "numpy",
    "anaconsole @ git+https://github.com/AsinoEsel/anaconsole-pygame.git@main#egg=anaconsole",
    "RestrictedPython",
    "fastapi[standard]",
    "artnet-python @ git+https://github.com/AsinoEsel/artnet-python.git@main#egg=artnet",
    "control-panel-terminal @ git+https://github.com/AsinoEsel/control-panel-terminal.git@main",
    "flake8 >= 5.0",
]

[project.optional-dependencies]
dev = [
    "micropython-esp32-stubs==1.25.0.*",
    "pathspec",
]

[project.entry-points."flake8.extension"]
RSP = "controlpanel.linting.restricted_checker:RestrictedPythonChecker"

[project.scripts]
controlpanel = "controlpanel.__main__:main"
generate_stubs = "dev_tools.generate_stubs.main:generate_all_stubs"
transfer = "dev_tools.transfer.transfer:main"
flash_firmware = "dev_tools.flash_firmware.flash_firmware:main"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"controlpanel.shared" = ["*.json"]
"controlpanel.game_manager" = ["icon.png"]
"controlpanel.shaders" = ["*.vert", "*.frag"]
